--- a/charts-application.yaml
+++ b/charts-application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: charts
-  namespace: argocd
+  namespace: default
 spec:
   project: default
   source:
@@ -11,7 +11,7 @@ spec:
     path: charts
   destination:
     server: 'https://kubernetes.default.svc'
-    namespace: argocd
+    namespace: default
   syncPolicy:
     automated:
       prune: true
