--- a/snow-plow/snow-plow.yaml
+++ b/snow-plow/snow-plow.yaml
@@ -284,7 +284,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: stream-enrich
-  namespace: snowplow
+  namespace: default
 spec:
   selector:
     app: stream-enrich
