--- a/charts/web/templates/ingress.yaml
+++ b/charts/web/templates/ingress.yaml
@@ -1,21 +1,21 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: {{ .Values.ingress.name }}
-  annotations:
-    {{- toYaml .Values.ingress.annotations | nindent 4 }}
-spec:
-  rules:
-    {{- range .Values.ingress.hosts }}
-    - http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType }}
-            backend:
-              service:
-                name: {{ .backend.service.name }}
-                port:
-                  number: {{ .backend.service.port.number }}
-          {{- end }}
-    {{- end }}
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: {{ .Values.ingress.name }}
+#   annotations:
+#     {{- toYaml .Values.ingress.annotations | nindent 4 }}
+# spec:
+#   rules:
+#     {{- range .Values.ingress.hosts }}
+#     - http:
+#         paths:
+#           {{- range .paths }}
+#           - path: {{ .path }}
+#             pathType: {{ .pathType }}
+#             backend:
+#               service:
+#                 name: {{ .backend.service.name }}
+#                 port:
+#                   number: {{ .backend.service.port.number }}
+#           {{- end }}
+#     {{- end }}
