--- a/charts/web/values.yaml
+++ b/charts/web/values.yaml
@@ -10,21 +10,21 @@ service:
   type: ClusterIP
   port: 80
 
-ingress:
-  name: web-ingress
-  enabled: true
-  annotations:
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization"
-  hosts:
-    - paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            service:
-              name: web
-              port:
-                number: 80
-  tls: []
+# ingress:
+#   name: web-ingress
+#   enabled: true
+#   annotations:
+#     nginx.ingress.kubernetes.io/enable-cors: "true"
+#     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+#     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
+#     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Authorization"
+#   hosts:
+#     - paths:
+#         - path: /
+#           pathType: Prefix
+#           backend:
+#             service:
+#               name: web
+#               port:
+#                 number: 80
+#   tls: []
